crates/courier-ftp/src/snapshots/courier_ftp__snapshot_tests__snap_ascii_symbols_classic_80x24.snap
---
source: crates/courier-ftp/src/snapshot_tests.rs
expression: screen
---
 Quickconnect (not available yet)                                               
 1 Local                                                                        
+ Message log - Tab 1 ---------------------------------------------------------+
|                                                                              |
|                                                                              |
+------------------------------------------------------------------------------+
#>Local ===============================#+ Remote ------------------------------+
#(not available yet)                   #|(not available yet)                   |
#                                      #|                                      |
#                                      #|                                      |
#                                      #|                                      |
#                                      #|                                      |
#                                      #|                                      |
#                                      #|                                      |
#                                      #|                                      |
#                                      #|                                      |
#                                      #|                                      |
#                                      #|                                      |
#======================================#+--------------------------------------+
+ Queue -----------------------------------------------------------------------+
|(not available yet)                                                           |
|                                                                              |
+------------------------------------------------------------------------------+
 [not connected] | Type: Auto | lim off     F1 help  F5 copy  F6 move  F7 mkdir
