crates/courier-ftp/src/snapshots/courier_ftp__snapshot_tests__snap_classic_160x48.snap
---
source: crates/courier-ftp/src/snapshot_tests.rs
expression: "h.render(160, 48)"
---
 Quickconnect (not available yet)                                                                                                                               
 1 Local                                                                                                                                                        
┌ Message log ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│(not available yet)                                                                                                                                           │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┏▶Local ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓┌ Remote ──────────────────────────────────────────────────────────────────────┐
┃(not available yet)                                                           ┃│(not available yet)                                                           │
┃                                                                              ┃│                                                                              │
┃                                                                              ┃│                                                                              │
┃                                                                              ┃│                                                                              │
┃                                                                              ┃│                                                                              │
┃                                                                              ┃│                                                                              │
┃                                                                              ┃│                                                                              │
┃                                                                              ┃│                                                                              │
┃                                                                              ┃│                                                                              │
┃                                                                              ┃│                                                                              │
┃                                                                              ┃│                                                                              │
┃                                                                              ┃│                                                                              │
┃                                                                              ┃│                                                                              │
┃                                                                              ┃│                                                                              │
┃                                                                              ┃│                                                                              │
┃                                                                              ┃│                                                                              │
┃                                                                              ┃│                                                                              │
┃                                                                              ┃│                                                                              │
┃                                                                              ┃│                                                                              │
┃                                                                              ┃│                                                                              │
┃                                                                              ┃│                                                                              │
┃                                                                              ┃│                                                                              │
┃                                                                              ┃│                                                                              │
┃                                                                              ┃│                                                                              │
┃                                                                              ┃│                                                                              │
┃                                                                              ┃│                                                                              │
┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛└──────────────────────────────────────────────────────────────────────────────┘
┌ Queue ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│(not available yet)                                                                                                                                           │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 NORMAL                                                                                                                                       F1 help  F10 quit
