crates/courier-ftp/src/snapshots/courier_ftp__snapshot_tests__snap_classic_no_log_no_queue_80x24.snap
---
source: crates/courier-ftp/src/snapshot_tests.rs
expression: "h.render(80, 24)"
---
 Quickconnect (not available yet)                                               
 1 Local                                                                        
┏▶Local ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓┌ Remote ──────────────────────────────┐
┃                                      ┃│                                      │
┃                                      ┃│                                      │
┃                                      ┃│                                      │
┃                                      ┃│                                      │
┃                                      ┃│                                      │
┃                                      ┃│                                      │
┃                                      ┃│                                      │
┃                                      ┃│                                      │
┃                                      ┃│                                      │
┃                                      ┃│     Not connected to any server      │
┃                                      ┃│Ctrl-s Site Manager · Ctrl-k Quickcon…│
┃                                      ┃│                                      │
┃                                      ┃│                                      │
┃                                      ┃│                                      │
┃                                      ┃│                                      │
┃                                      ┃│                                      │
┃                                      ┃│                                      │
┃                                      ┃│                                      │
┃                                      ┃│                                      │
┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛└──────────────────────────────────────┘
 NORMAL                                                       F1 help  F10 quit
