crates/courier-ftp/src/snapshots/courier_ftp__snapshot_tests__snap_compact_60x16_log_focused.snap
---
source: crates/courier-ftp/src/snapshot_tests.rs
expression: "h.render(60, 16)"
---
 1 Local                                                    
┏▶Message log · Tab 1 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
┃                                                          ┃
┃                                                          ┃
┃                                                          ┃
┃                                                          ┃
┃                                                          ┃
┃                                                          ┃
┃                                                          ┃
┃                                                          ┃
┃                                                          ┃
┃                                                          ┃
┃                                                          ┃
┃                                                          ┃
┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
 – not connected │ Type: Auto │ ⇅ off          compact mode
