crates/courier-ftp/src/snapshots/courier_ftp__snapshot_tests__snap_compact_60x16_remote_focused.snap
---
source: crates/courier-ftp/src/snapshot_tests.rs
expression: screen
---
 1 Local                                                    
┏▶Remote ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
┃                                                          ┃
┃                                                          ┃
┃                                                          ┃
┃                                                          ┃
┃                                                          ┃
┃               Not connected to any server                ┃
┃        Ctrl-s Site Manager · Ctrl-k Quickconnect         ┃
┃                                                          ┃
┃                                                          ┃
┃                                                          ┃
┃                                                          ┃
┃                                                          ┃
┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
 – not connected │ Type: Auto │ ⇅ off          compact mode
